[gd_scene load_steps=3 format=3 uid="uid://b4eikmpc3qmw6"]

[ext_resource type="Script" path="res://Scripts/killzone.gd" id="1_6pbdk"]
[ext_resource type="AudioStream" uid="uid://du3gcw5mhvnex" path="res://Assets/sounds/hurt.wav" id="2_voi4e"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_6pbdk")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Hurt_noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_voi4e")
bus = &"Sound effects"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
